# sqlglot

./: Makefile  profile.json
benchmarks/: bench_rs_long.py  bench_rs_short.py
sqlglotrs/: Cargo.toml
sqlglotrs/benches/: long.rs
sqlglotrs/src/: benchmark.rs  lib.rs  settings.rs  token.rs  tokenizer.rs  trie.rs
