[package]
name = "sqlglotrs"
version = "0.3.0"
edition = "2021"
license = "MIT"

[lib]
name = "sqlglotrs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "long"
harness = false

[features]
# Enable this feature to use the serde and serde_json crates for profiling purposes
default = ["profiling"]
profiling = ["serde", "serde_json"]

[dependencies]
pyo3 = {version ="0.22.6", features = ["auto-initialize"]}
rustc-hash = "2.1.0"

# Optional dependencies used for profiling
serde = { version = "1", features = ["derive"] , optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5"
[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
